Added search and top level document list

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -50,6 +50,8 @@ $border-color: $white;
 
 $input-bg: $gray-100;
 
+$small-font-size: 0.75em;
+
 @import "../node_modules/bootstrap/scss/bootstrap";
 @import "_svg";
 @import "_form";
